2017-07-17         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y [non_post_simp_exp]: Merge LEX_BUILTIN and
	LEX_LENGTH expansions.
	(lookup_builtin): Move MPFR test to after test for sub builtin.

	* awkgram.y [non_post_simp_exp]: Unmerge LEX_BUILTIN and
	LEX_LENGTH expansions. This introduced a reduce/reduce
	conflict, and those are bad.  I don't know why I didn't
	notice this earlier. Sigh.

2017-07-15         Arnold D. Robbins     <arnold@skeeve.com>

	Revert change of 2016-07-24 that always runs the dfa
	matcher. Based on a bug report from Alexandre Oliva
	<lxoliva@fsfla.org>, DFA can cause gawk to hang, even
	in the C locale.

	* re.c (research): Don't use dfa if need_start is true.

2017-07-13         Arnold D. Robbins     <arnold@skeeve.com>

	More rationalization of the namespace code.

	* awk.h (is_valid_identifier): Declare.
	* awkgram.y (grammar: direct_func_call): Store the fully qualified
	name in the op code.
	(yylex): Disallow reserved words and functions as namespace name.
	(check_params): Small code edit
	(validate_qualified_name): Use is_lsetter.
	(set_namespace): Check for NULL pointer first! Use is_valid_identifier
	instead of inline code.  Disallow using reserved words as namespace
	names.
	* ext.c (is_valid_identifier): No longer static.
	(make_builtin): Check name and namespace gainst reserved words and
	fatal error if found.
	* gawkapi.c (ns_lookup): New function to look for variables
	in namespaces.
	(api_sym_lookup): Check namespace for validity and use ns_lookup.
	(api_sym_update): Ditto.
	* profile.c (pp_print): Correctly print full function name
	in a function call.

2017-07-11         Arnold D. Robbins     <arnold@skeeve.com>

	Continue adding namespace support to the extension API.

	* awk.h (make_builtin): Add leading name_space parameter.
	* ext.c (make_builtin): Add leading name_space parameter.
	Do the appropriate checking and building of a name before
	installing in the symbol table.